--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+server.port=8005
 
+# Datasource
+spring.datasource.url=jdbc:mariadb://localhost:9001/batch_schema
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Para crear las tablas automaticamente
+# spring.jpa.hibernate.ddl-auto=create
+
+#Batch
+# Deshabilita la auto ejecucion del proceso al levantar el sistema
+spring.batch.job.enabled: false
+# Crea las estructuras de tabla en la Base de Datos
+spring.batch.initialize-schema=always
