--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Para crear las tablas automaticamente
-# spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=update
 
 #Batch
 # Deshabilita la auto ejecucion del proceso al levantar el sistema
